Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjNumObjWrapped.quorum
class main
    action main
        Number num
        num:setValue(7.5)
        Text t = num
    end
end